--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="script.js" type="text/javascript"></script>
 </head>
 
-<body background="http://orig10.deviantart.net/f1ec/f/2011/037/0/6/wallpaper_blur_experiment_2_by_spiceofdesign-d38xdql.png">
+<body>
     <div class="google">
     	<center>
         	<img src="google.png" height="92" width="272">
