--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="script.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body bgcolor="#FFFFFF">
     <div class="google">
     	<center>
         	<img src="google.png" height="92" width="272">
