--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Anasayfam</title>
+<title>Homepage</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="script.js" type="text/javascript"></script>
 </head>
