--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Homepage</title>
+<title>Anasayfam</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="script.js" type="text/javascript"></script>
 </head>
 
-<body bgcolor="#FFFFFF">
+<body>
     <div class="google">
     	<center>
         	<img src="google.png" height="92" width="272">
@@ -35,6 +36,9 @@
         </center>
     </div>
     <br><br><br><br>
-    <div class="csgostats" id="png"><a id="cslink" href=''><img  id="csimg" src=''/></a></div>
+    <div ng-app="csgostats" ng-controller="ctrl">
+    <div class="zstats" id="zpng"><a id="zlink" href="{{ zurl }}"><img  id="zimg" src="{{ zpng }}"/></a></div>
+	<div class="cstats" id="cpng"><a id="cslink" href="{{ curl }}"><img  id="cimg" src="{{ cpng }}"/></a></div>
+    </div>
 </body>
 </html>
