--- a/adblock1.html
+++ b/adblock1.html
@@ -17,7 +17,7 @@ $(BlockerBanner);
 </style>
 </head>
 </body>
-<div class="adblock">
+<div id="ust_banner" class="adblock">
 No AdBlock
 </div>
 </body></html>
