--- a/adblock0.html
+++ b/adblock0.html
@@ -1,15 +1,15 @@
+<html>
+</head>
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script>
 function BlockerBanner() {
         if ($('.adblock').height() == 0){
-        alert('Please disable AdBlock plugin or create subscription to watch the video.');
+        alert($('.adblock').height());
         //window.location.replace("redirect");
         }
         }
 $(BlockerBanner);
 </script>
-<html>
-</head>
 <style>
 .adblock {
     height: 0;
