--- a/youtify.html
+++ b/youtify.html
@@ -1,6 +1,6 @@
-<html><script>
-  document.write(qs['code'])
-  var qs = (function(a) {
+<html><head>
+<script>
+var qs = (function(a) {
     if (a == "") return {};
     var b = {};
     for (var i = 0; i < a.length; ++i)
@@ -12,4 +12,7 @@
             b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
     }
     return b;
-})(window.location.search.substr(1).split('&'));</script></html>
+})(window.location.search.substr(1).split('&'));
+  document.write(qs['code']);
+ </script>
+ </head></html>
