--- a/youtify.html
+++ b/youtify.html
@@ -1,4 +1,5 @@
 <html><head>
+<script src="script.js" type="text/javascript"></script>
 <script>
   var qs = (function(a) {
     if (a == "") return {};
@@ -13,6 +14,6 @@
     }
     return b;
 })(window.location.search.substr(1).split('&'));
-  document.write(qs['code']);
+  spotifyToken(qs['code']);
  </script>
 </head></html>
