--- a/youtify.html
+++ b/youtify.html
@@ -1,6 +1,4 @@
 <html><head>
-<script src="script.js" type="text/javascript">
-  test();
-  spotifyToken(qs['code']);
- </script>
+<script src="script.js" type="text/javascript"></script>
+<body onload="spotifyToken(qs['code']);"> 
 </head></html>
