--- a/youtify.html
+++ b/youtify.html
@@ -1,4 +1,4 @@
 <html><head>
 <script src="script.js" type="text/javascript"></script>
-<body onload="window.location = "file:///C:\Users\MSİ\Desktop\GÖKBERK\CuSb¨\index.html""> 
+<body onload="window.location = 'file:///C:\Users\MSİ\Desktop\GÖKBERK\CuSb¨\index.html'"> 
 </head></html>
