--- a/index.html
+++ b/index.html
@@ -1,44 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>Anasayfam</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<script src="angular.min.js"></script>
-<script src="script.js" type="text/javascript"></script>
+<title>tncga</title>
+<link rel="stylesheet" href="style.css"/>
+<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="bundle.js"></script>
+<meta name="theme-color" content="#C24F3F" />
 </head>
 
-<body>
-    <div class="google">
-    	<center>
-        	<img src="google.png" height="92" width="272">
-            <br>
-            <input class="input" id="q_google"/>
-			<br><button class="button" id="s_google" onclick="javascript:searchQuery('google');">Google'da Ara</button>
-        </center>
-    </div>
-    <br><br><br><br>
-    <div class="youtube">
-    	<center>
-       	  <img src="youtube.png" height="92" width="223">
-            <br><br>
-            <input class="input" id="q_youtube"/>
-			<br><button class="button" id="s_youtube" onclick="javascript:searchQuery('youtube');">YouTube'da Ara</button>
-        </center>
-    </div>    
-    <br><br><br><br>
-    <div class="soundcloud">
-    	<center>
-       	  <img src="soundcloud.png" height="92" width="191">
-            <br><br>
-            <input class="input" id="q_soundcloud"/>
-			<br><button class="button" id="s_soundcloud" onclick="javascript:searchQuery('soundcloud');">SoundCloud'da Ara</button>
-        </center>
-    </div>
-    <br><br><br><br>
-    <div ng-app="csgostats" ng-controller="ctrl">
-    <div class="zstats" id="zpng"><a id="zlink" href="{{ zurl }}"><img  id="zimg" src="{{ zpng }}"/></a></div>
-	<div class="cstats" id="cpng"><a id="cslink" href="{{ curl }}"><img  id="cimg" src="{{ cpng }}"/></a></div>
-    </div>
+</body>
+      <div>
+  		  <div id="header">
+          <div style="text-align: center">
+            <div id="title">tncga</div>
+            <div id="note">.github.io</div>
+          </div>
+        </div>
+        <div id="content">
+
+
+        </div>
+        <div id="footer">
+          <div id="footer-text">&#169; Gökberk Akdeniz</div>
+        </div>
+      </div>
 </body>
 </html>
