--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
           </div>
         </div>
         <div id="content">
-
-
+          Loading...
         </div>
         <div id="footer">
           <div id="footer-text">&#169; Gökberk Akdeniz</div>
