--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>tncga</title>
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="./css/green.theme.css" id="color-theme">
+
 <script type="text/javascript" src="app.js"></script>
 <meta name="theme-color" content="#C24F3F" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,9 +14,12 @@
 </body>
       <div>
   		<div id="header">
-          <div style="text-align: center">
+          <div>
             <div id="title">tncga</div>
             <div id="note">.github.io</div>
+            <div id="theme-selecter">
+              #
+            </div>
           </div>
         </div>
         <div id="content">
